package modele.cartes;

import modele.Carte;
import modele.Categorie;

public class Neuf extends Carte{

	public Neuf(Categorie categ) {
		
		super(categ, 0);
		// TODO Auto-generated constructor stub
	}

	@Override
	public String toString() {
		return "Neuf";
	}

}
