@startuml

title __CARTES's Class Diagram__\n

  package modele {
    package modele.cartes {
      class As {
          + toString()
          + As()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Dame {
          + toString()
          + Dame()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Dix {
          + Dix()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Huit {
          + Huit()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Neuf {
          + Neuf()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Roi {
          + Roi()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Sept {
          + Sept()
          + toString()
      }
    }
  }
  

  package modele {
    package modele.cartes {
      class Valet {
          + Valet()
          + toString()
      }
    }
  }
  

  As -up-|> Carte
  Dame -up-|> Carte
  Dix -up-|> Carte
  Huit -up-|> Carte
  Neuf -up-|> Carte
  Roi -up-|> Carte
  Sept -up-|> Carte
  Valet -up-|> Carte


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
